added font awesome icons in contacts

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,8 +237,7 @@ sup {
 }
 
 a {
-  color: rgb(231, 182, 186);
-  text-decoration: underline;
+  color: #fcf8e3;
 }
 a:hover {
   color: rgb(231, 182, 186);
